tests/sksl/errors/IncompleteExpression.glsl
### Compilation failed:

error: 2: expected '(' to begin constructor invocation
error: 3: expected a type, but found 'return'
2 errors
